# monitor_switcher

./: Cargo.toml  ControlMyMonitor.cfg  README.md  TODO.md  build.rs  config.toml
.github/workflows/: rust.yml
src/: main.rs
